automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,9 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_values "
+   ]
   },
   {
    "cell_type": "markdown",
