automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values = [cities[0]['Populati']]"
+    "y_values = [cities[0]['Population'], ]"
    ]
   },
   {
