--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values = [cities[0]['Population'], cities[1]['Population'], ]"
+    "y_values = [cities[0]['Population'], cities[1]['Population'], cities]"
    ]
   },
   {
