automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -265,7 +265,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "plot = {}"
+   ]
   },
   {
    "cell_type": "markdown",
