automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,7 @@
     }
    ],
    "source": [
-    "plot = {'x' : x_values, 'y': y_values, }"
+    "plot = {'x' : x_values, 'y': y_values, 'type':}"
    ]
   },
   {
