automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,9 @@
     }
    ],
    "source": [
-    "plot = {'x' : x_values, 'y': y_values, 'type':}"
+    "plot = {'x' : x_values, 'y': y_values, 'type': 'bar'}\n",
+    "\n",
+    "plotly.offline."
    ]
   },
   {
