automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,7 @@
    "source": [
     "plot = {'x' : x_values, 'y': y_values, 'type': 'bar'}\n",
     "\n",
-    "plotly.offline."
+    "plotly.offline.iplot([])"
    ]
   },
   {
