--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [cities[0]['City']]"
+    "text_values = [cities[0]['City'], cities[1]['City']]"
    ]
   },
   {
