--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [cities[0]['City'], cities[1]['City']]"
+    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
+    "bar_trace_first_three_pops"
    ]
   },
   {
