automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,11 +295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [cities[-1]['City'], cities[-2['City'], cities[2]['City']]\n",
+    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "bar_trace_first_three_pops = {'type':'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -334,9 +334,9 @@
        "data": [
         {
          "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
+          "Iguazu Falls",
+          "Solta",
+          "Salina Island"
          ],
          "type": "bar",
          "x": [
@@ -354,10 +354,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"89d241e2-e9c4-4abf-b036-bfa6d04d63db\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"89d241e2-e9c4-4abf-b036-bfa6d04d63db\", [{\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"8941dc2d-c931-4387-8874-51edfe1476fd\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8941dc2d-c931-4387-8874-51edfe1476fd\", [{\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"text\": [\"Iguazu Falls\", \"Solta\", \"Salina Island\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"89d241e2-e9c4-4abf-b036-bfa6d04d63db\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"89d241e2-e9c4-4abf-b036-bfa6d04d63db\", [{\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"8941dc2d-c931-4387-8874-51edfe1476fd\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8941dc2d-c931-4387-8874-51edfe1476fd\", [{\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"text\": [\"Iguazu Falls\", \"Solta\", \"Salina Island\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
